--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
         	<groupId>org.mongodb</groupId>
         	<artifactId>mongo-java-driver</artifactId>
         </dependency>
+        <dependency>
+        	<groupId>org.json</groupId>
+        	<artifactId>json</artifactId>
+        	<version>20141113</version>
+        </dependency>
     </dependencies>
 
     <!-- Package as an executable jar -->
