--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,14 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.5.0-b01</version>
+        </dependency>
+
+
     </dependencies>
 
     <!-- Package as an executable jar -->
